# dbt_blogs

./: .example.env  .flake8  .gitignore  .poetry.toml  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  structure_tree.sh
.circleci/: config.yml
analysis/: .gitignore  Analysis_praw.ipynb  Analysis_pushshift.ipynb  test_macros.ipynb  zero_shot_inference.py.ipynb
dbt/: .gitignore  Dockerfile  Makefile  dbt_project.yml  docker-compose.yml  profiles.yml
dbt/dbt_project/: dbt_project.yml  profiles.yml
dbt/dbt_project/macros/: create_udfs.sql  udf__zero_shot_features.sql  zero_shot_columns.sql  zero_shot_labels.sql
dbt/macros/: udf__top_n_columns.sql  udf__zero_shot_features.sql
dbt/models/outputs/reddit/: output_reddit__label_posts.sql
dbt/models/staging/reddit/: src_reddit.yml  stg_reddit.yml
dbt/models/staging/reddit/base/: base__reddit_subreddit_data_engineering.sql
dbt/models/staging/reddit/preprocess/: stg_reddit__filter_posts.sql
dbt/models/staging/reddit/zero_shot/: stg_reddit__zero_shot.sql  stg_reddit__zero_shot_top_n_labels.sql
docs/: README.md  architecture.md  development.md  structure.md  structure_base.md
postgres/: .gitignore  Dockerfile  Makefile  docker-compose-prod.yml  docker-compose.yml  postgres-prod.conf  postgres.conf
postgres/scripts/python/: config.yml  save_pretrained_zero_shot.py  zero_shot_classification.py
postgres/scripts/sql/: init.sh
