[tool.poetry]
name        = "dbt blogs"
version     = "0.1.0"
description = "Run dbt blogs outside of docker"
authors     = ["Niall O'Riordan <oriordanniall1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

black                  = "21.12b0"
dbt-postgres           = "1.0.0"
flake8                 = "4.0.1"
isort                  = "5.10.1"
jupyter                = "1.0.0"
pandas                 = "1.3.5"
python-dotenv          = "0.19.2"
sqlfluff               = "0.9.0"
sqlfluff-templater-dbt = "0.9.0"
torch                  = "1.10.1"
transformers           = "4.14.1"

[build-system]
requires      = ["poetry-core>=1.2.0a2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile     = "black"
line_length = 100

[tool.sqlfluff.core]
templater     = "jinja"
dialect       = "postgres"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "L044,L031"

[tool.sqlfluff.templater.dbt]
project_dir  = "dbt/dbt_project"
profiles_dir = "dbt/dbt_project"
profile      = "data_engineering"
target       = "dev"

[tool.sqlfluff.templater.jinja.macros]
dbt_ref            = "{% macro ref(model_ref) %}dbt_{{model_ref}}{% endmacro %}"
dbt_source         = "{% macro source(source_name, table) %}{{source_name}}_{{table}}{% endmacro %}"
dbt_config         = "{% macro config() %}{% for k in kwargs %}{% endfor %}{% endmacro %}"
dbt_var            = "{% macro var(variable) %}item{% endmacro %}"
dbt_is_incremental = "{% macro is_incremental() %}False{% endmacro %}"
zero_shot_labels   = "{% macro zero_shot_labels(output_schema = False)%}zero_shot_label{% endmacro %}"

[tool.sqlfluff.templater.jinja.context]
target.name          = "dev"
max_zero_shot_labels = 3

[tool.sqlfluff.templater.jinja]
load_macros_from_path = "dbt/dbt_project/macros"

[tool.sqlfluff.rules]
tab_space_size              = 4
max_line_length             = 100
indent_unit                 = "space"
comma_style                 = "trailing"
allow_scalar                = true
single_table_references     = "consistent"
unquoted_identifiers_policy = "all"
